--- a/index.ipynb
+++ b/index.ipynb
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = cities[]\n",
+    "pyeongchang_values = cities['PyeongCha']\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
