--- a/index.ipynb
+++ b/index.ipynb
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities['PyeongChang']\n",
+    "pyeongchang_values = cities[7]\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
