--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4][2] = 288\n",
+    "los_cabos_pop = cities[''][2] = 288\n",
     "los_cabos_pop # 288"
    ]
   },
