--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -351,13 +351,13 @@
        "288"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[]['Population']\n",
+    "los_cabos_pop = cities[4]['Population']\n",
     "los_cabos_pop # 288"
    ]
   },
