Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "city_count = travel_df.shape[0]\n",
+    "city_count = l\n",
     "city_count # 12"
    ]
   },
